--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,20 @@ version = "0.1.0"
 edition = "2024"
 description = "A comprehensive library for classical and modern cryptographic algorithms."
 license = "Apache-2.0"
+authors = ["Fathi Abdelmalek <dev@imfathi.com>"]
+homepage = "https://github.com/fathiabdelmalek/polygraphia"
+repository = "https://github.com/fathiabdelmalek/polygraphia"
+documentation = "https://docs.rs/polygraphia"
+readme = "README.md"
+keywords = ["cryptography", "cipher", "encryption", "caesar", "playfair"]
+categories = ["cryptography", "algorithms"]
 
 [lib]
 name = "polygraphia"
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
+rand = "0.9.2"
+pbkdf2 = { version = "0.12.0", features = ["simple"] }
+sha2 = "0.10.6"
+base64 = "0.22.1"
